Added Java DSL